<resources>
    <string name="app_name" translatable="false">Habitood</string>
    <string name="title_activity_authentication" translatable="false">Habitood</string>
    <string name="business_key_prefix" translatable="false">sbc</string>
    <string name="dash" translatable="false">-</string>
    <string name="loading">Loading&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="auth_failed">Authentication failed&#8230;</string>
    <string name="acct_creation_failed">Account creation failed&#8230;</string>
    <string name="creating_acct">Creating account&#8230;</string>
    <string name="invalid_fields">Invalid entries found.</string>
    <string name="resend_verification_email">Verification email sent to provided email address. Please verify your email.</string>
    <string name="email_address">Email Address:</string>
    <string name="resend">Resend</string>
    <string name="dismiss">Dismiss</string>
    <string name="youre_signed_in">You\'re Signed In. Yay!</string>
    <string name="active_team_pinpoints">Your active team\'s pinpoints:</string>
    <string name="powered_by">*Powered by %s</string>
    <string name="login_failed">Login failed.</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="email_exists">Email already exists in the system</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="incorrect_email">Email not found</string>
    <string name="incorrect_password">Password is incorrect.</string>
    <string name="incorrect_creds">Email malformed and/or password too short.</string>
    <string name="nonmatching_passwords">Passwords do not match</string>
    <string name="recovery_email_sent">Password reset email sent to email address listed above.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_acct">Create an account</string>
    <string name="create_acct_btn">Create Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_not_registered">The entered email is not registered.</string>
    <string name="sending_email">Sending password reset email&#8230;</string>
    <string name="empty_name">Name may not be blank.</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="biz_email">Business Email</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="already_member">Already a member? Login</string>
    <string name="blank_password">Password may not be blank</string>
    <string name="business_key">Enter your Company\'s Business Key:</string>
    <string name="submit">Submit</string>
    <string name="working">Working&#8230;</string>
    <string name="no_biz_found">No business found. Please check the business key and try again.</string>
    <string name="correct_company">Is this the correct company?</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_business_label">Confirm Business</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="never_heard_of_them">Never heard of them</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="add_company">Add Your Company</string>
    <string name="add_team">Create a Team</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="add_company_to_begin">Add your company to begin.</string>
    <string name="teams">Teams</string>
    <string name="my_teams">My Teams</string>
    <string name="settings">Settings</string>
    <string name="enter_team_label">Enter a Team Name</string>
    <string name="leader1_label">Team Leader 1:</string>
    <string name="leader2_label">Team Leader 2:</string>
    <string name="team_added">Team Added!</string>
    <string name="team_exists_already">Error! Team name exists already. Choose another team name.</string>
    <string name="team_name">Team Name:</string>
    <string name="core_team_leader_label">Core Team Leader:</string>
    <string name="secondary_core_team_leader_label">Secondary Team Leader:</string>
    <string name="join">Join</string>
    <string name="search">Search</string>
    <string name="active_team">Active Team:</string>
    <string name="teams_found">Select a Team from your Teams list to make it active!</string>
    <string name="tap_to_select_leader">Tap to select Leader</string>
    <string name="no_network">This is unavailable while there is no internet connectivity.</string>
    <string name="success_rate">On %s the pinpoint success rate was %s%%</string>
    <string name="create_date">Create Date:</string>
    <string name="team_size">Number in Team:</string>
    <string name="teams_admin">Teams Admin</string>
    <string name="no_team_found">No Team. Create One!</string>
    <string name="team_label">Team:</string>
    <string name="touch_add_photo">Touch here to add a photo</string>
    <string name="team_members">Team Members:</string>
    <string name="team_swipe_left">(swipe left to remove from team)</string>
    <string name="non_team_members">Non-Team Members:</string>
    <string name="team_swipe_right">(swipe right to add to team)</string>
    <string name="cannot_remove_leader">Cannot remove assigned core team leader. Action undone.</string>
    <string name="set_active">Set Active</string>
    <string name="set_inactive">Set Inactive</string>
    <string name="error">Error</string>
    <string name="error_occurred">We\'re sorry, an error occurred. Please try again.</string>
    <string name="undef_params">Parameters were undefined. Please contact bugs@habitood.com if you see this.</string>
    <string name="no_users_selected">No users were selected for the operation.</string>
    <string name="insufficient_seats">Insufficient seats for operation. Please contact bugs@habitood.com if you see this.</string>
    <string name="add_secondary_leader">You must add a secondary core team leader before you can create a team.</string>
    <string name="users_marked_active">Users were marked active.</string>
    <string name="users_count_marked_active">%s User(s) were marked active.</string>
    <string name="users_count_marked_inactive">%s User(s) were marked inactive.</string>
    <string name="users_count_removed">%s User(s) were removed from Business.</string>
    <string name="users_count_rank_changed">The rank was changed on %s user(s).</string>
    <string name="users_leading_team_error">Users Leading Team Error</string>
    <string name="users_leading_team_error_msg">Team Leaders who are actively leading a team may not have their rank changed, marked inactive, or removed from the business. Users actively leading:\n</string>
    <string name="select_new_rank">Select New Rank</string>
    <string name="pinpoint_admin">Pinpoint Admin</string>
    <string name="pinpoint_progress">Pinpoint Progress</string>
    <string name="pinpoints">Pinpoints</string>
    <string name="team_active_pinpoints">Active Pinpoints for your Team:</string>
    <string name="view_pinpoints">View All Pinpoints</string>
    <string name="all_pinpoints">All Pinpoints:</string>
    <string name="pinpoint_complete">Pinpoint Complete</string>
    <string name="pinpoint_name">Pinpoint Title:</string>
    <string name="pinpoint_description">Pinpoint Description:</string>
    <string name="max_characters">128 Characters Max</string>
    <string name="blank_pinpoint_name">Pinpoint title may not be blank.</string>
    <string name="blank_pinpoint_descr">Pinpoint description may not be blank.</string>
    <string name="no_more_pinpoint_room">3 Pinpoints are already selected for this team. Please remove an active pinpoint and try again.</string>
    <string name="undo_pinpoint_swipe">Pinpoint removed from team.</string>
    <string name="undo">UNDO</string>
    <string name="no_active_team">You have not selected a team to be your "active" team. Please select a team, and its pinpoints will be displayed here.</string>
    <string name="no_active_team_caps">NO ACTIVE TEAM!</string>
    <string name="no_pinpoints_assigned">The Core Team Leader has not assigned any pinpoints to this Team.</string>
    <string name="pinpoint_label">Pinpoint:</string>
    <string name="pinpoint_exists">Pinpoint with this title already exists.</string>
    <string name="swipe_left_forgot_pinpoint">Swipe left if pinpoint was overlooked.</string>
    <string name="swipe_right_completed_pinpoint">Swipe right if pinpoint was completed.</string>
    <string name="pinpoint_add_to_team_fail">You must be the team leader or secondary team leader of a team to add pinpoints.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_header">Swipe to dismiss a notification.</string>
    <string name="you_have_notifs">You have </string>
    <string name="notifs_waiting"> unread Notifications.</string>
    <string name="frontline_supervisor_label">Frontline Supervisor:</string>
    <string name="select_sup">Tap to select Supervisor</string>
    <string name="swipe_to_add_sup">Swipe Right to select a Supervisor.</string>
    <string name="user_admin">User Admin</string>
    <string name="users">Users:</string>
    <string name="refresh">Refresh</string>
    <string name="rank_not_set">Rank: N/A</string>
    <string name="not_set">Not Set</string>
    <string name="frontline_personnel">Front-line Personnel</string>
    <string name="core_team_leader">Core Team Leader</string>
    <string name="supervisor">Supervisor</string>
    <string name="manager">Manager</string>
    <string name="action_unavailable">This action is unavailable without internet connectivity.</string>
    <string name="user_name">User Name:</string>
    <string name="company_rank">Company Rank:</string>
    <string name="tap_to_change">(Tap to Change)</string>
    <string name="team_leading">Team Leading:</string>
    <string name="active_user">Active User:</string>
    <string name="na">N/A</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_rank">Select User\'s Rank:</string>
    <string name="cannot_change_team_leader_rank">This Core Team Leader is leading a Team. You must remove this person from leadership of the Team before you can change their rank. Team: </string>
    <string name="operation_failed">Operation Failed</string>
    <string name="open_team">Open Team</string>
    <string name="primary_team_leader">Primary Core Team Leader:</string>
    <string name="secondary_team_leader">Secondary Core Team Leader:</string>
    <string name="user_removed">User removed from team.</string>
    <string name="core_team_leaders">Core Team Leaders</string>
    <string name="team_not_leading_team">The Team Admin section is only available to Core Team Leaders who are actively leading a team.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_pinpoint_progress">Pinpoint Progress Activity</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_to_profile">Save Photo to Profile</string>
    <string name="message_feed">Message Feed</string>
    <string name="new_note">New Cork Board Note</string>
    <string name="new_caps">NEW</string>
    <string name="messageFirebase">Message:</string>
    <string name="from_label">From:</string>
    <string name="admin">Admin</string>
    <string name="configure">Configure</string>
    <string name="team_cork_board">Team Cork Board</string>
    <string name="bulk_export">Bulk Export</string>
</resources>