<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_dark_colors_gradient_background"
    tools:context="com.astutusdesigns.habitood.business.AddBusinessActivity">

    <TextView
        android:id="@+id/logout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/submit_business_id_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/organization_icon"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/business_id_textview"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_business_id_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/business_id_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/business_id_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_light"
        android:gravity="center"
        android:text="@string/business_key"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/business_id_textview"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/business_key_prefix"
            android:textColor="@color/primaryText"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/five_digit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="4"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="5"
            android:textColor="@color/primaryText"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/two_digit_with_char"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:inputType="text"
            android:maxLength="3"
            android:textColor="@color/primaryText"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/dash"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/three_digit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/primaryText"
            android:textSize="19sp"/>

    </LinearLayout>

    <include layout="@layout/layout_progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
